--- a/app/src/main/res/layout/editar_medicamento.xml
+++ b/app/src/main/res/layout/editar_medicamento.xml
@@ -104,12 +104,35 @@
             android:text="23"
             android:textColor="#FFFFFF"
             android:textSize="40sp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerView_hora"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout">
 
         <Button
             android:id="@+id/guardarBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Guardar" />
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|center_horizontal"
+            android:backgroundTint="#4CAF50"
+            android:text="Guardar"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
