--- a/app/src/main/res/layout/medicamento.xml
+++ b/app/src/main/res/layout/medicamento.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:id="@+id/medicamento"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginBottom="30dp"
         android:baselineAligned="false"
         android:orientation="horizontal">
@@ -86,33 +86,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="39dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
-                    android:text="Inicio del tratamiento:"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/fechaMed"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
-                    android:text="22/02/2022"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="16sp" />
-            </LinearLayout>
         </LinearLayout>
 
 
