--- a/app/src/main/res/layout/editar_medicamento.xml
+++ b/app/src/main/res/layout/editar_medicamento.xml
@@ -60,7 +60,8 @@
             android:layout_height="wrap_content"
             android:text="Medicamento:"
             android:textColor="#000000"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+        />
 
         <EditText
             android:id="@+id/nombreEditar"
@@ -68,7 +69,7 @@
             android:layout_height="wrap_content"
             android:text="MEDICAMENTO1"
             android:textColor="#FFFFFF"
-            android:textSize="40sp" />
+            android:ems="10"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -86,7 +87,7 @@
             android:layout_weight="1"
             android:text="1"
             android:textColor="#FFFFFF"
-            android:textSize="40sp" />
+            android:ems="10" />
 
         <TextView
             android:id="@+id/textView8"
@@ -103,7 +104,38 @@
             android:layout_weight="1"
             android:text="23"
             android:textColor="#FFFFFF"
-            android:textSize="40sp" />
+            android:ems="10" />
+
+        <TextView
+        android:id="@+id/textView18"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Tiempo:"
+        android:textColor="#000000"
+        android:textSize="15sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TimePicker
+                android:id="@+id/timePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:timePickerMode="spinner" />
+
+            <Button
+                android:id="@+id/agregarBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#3F51B5"
+                android:text="Agregar"
+                android:textColorHighlight="#3F51B5"
+                android:textColorLink="#3F51B5" />
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RecyclerView_hora"
             android:layout_width="match_parent"
