--- a/app/src/main/res/layout/activity_reestabler_contra.xml
+++ b/app/src/main/res/layout/activity_reestabler_contra.xml
@@ -14,6 +14,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="48dp"
+            android:layout_height="43dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@null"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/baseline_arrow_back_24" />
+
         <LinearLayout
             android:id="@+id/titulo"
             android:layout_width="match_parent"
