--- a/app/src/main/res/layout/alta_medicamentos.xml
+++ b/app/src/main/res/layout/alta_medicamentos.xml
@@ -65,6 +65,7 @@
             android:layout_gravity="bottom|center_horizontal"
             android:backgroundTint="#4CAF50"
             android:text="Guardar"
+            android:textColor="@color/white"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -96,6 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@drawable/redondeado"
+            android:textColor="@color/black"
             android:ems="10"
             android:hint="Medicamento"
             android:padding="10dp" />
@@ -116,6 +118,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/redondeado"
             android:ems="10"
+            android:textColor="@color/black"
             android:hint="Dosis"
             android:inputType="number"
             android:padding="10dp" />
@@ -136,6 +139,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/redondeado"
             android:ems="10"
+            android:textColor="@color/black"
             android:hint="Stock"
             android:inputType="number"
             android:padding="10dp" />
