--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -91,24 +91,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout2">
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#D9D9D9"
-            android:paddingStart="10dp"
-            android:paddingLeft="5dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="10dp"
-            android:paddingRight="5dp"
-            android:paddingBottom="5dp"
-            android:text="CODEID1234"
-            android:textColor="#000000"
-            android:textSize="40sp" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2"/>
 
     <Button
         android:id="@+id/logOutBtn"
